deploy/k8s/services/processor-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processor-ingress
  namespace: evolution
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: processor-ingress
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: processor-api-cluster-ip
            port: 
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: processor-api-cluster-ip
            port: 
              number: 80
